@@ -58,7 +58,6 @@ import java.io.InputStream;
 import java.io.Reader;
 import java.net.InetAddress;
 import java.net.URI;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
@@ -987,34 +986,37 @@ public class CertificateToolTests extends ESTestCase {
      * Writes the description of instances to a given {@link Path}
      */
     private Path writeInstancesTo(Path path) throws IOException {
-        Iterable<String> instances = Arrays.asList(
-            "instances:",
-            "  - name: \"node1\"",
-            "    ip:",
-            "      - \"127.0.0.1\"",
-            "    dns: \"localhost\"",
-            "  - name: \"node2\"",
-            "    filename: \"node2\"",
-            "    ip: \"::1\"",
-            "    cn:",
-            "      - \"node2.elasticsearch\"",
-            "  - name: \"node3\"",
-            "    filename: \"node3\"",
-            "  - name: \"CN=different value\"",
-            "    filename: \"different file\"",
-            "    dns:",
-            "      - \"node4.mydomain.com\""
-        );
-
-        return Files.write(path, instances, StandardCharsets.UTF_8);
+        String instances = """
+            instances:
+              - name: "node1"
+                ip:
+                  - "127.0.0.1"
+                dns: "localhost"
+              - name: "node2"
+                filename: "node2"
+                ip: "::1"
+                cn:
+                  - "node2.elasticsearch"
+              - name: "node3"
+                filename: "node3"
+              - name: "CN=different value"
+                filename: "different file"
+                dns:
+                  - "node4.mydomain.com"
+            """;
+        return Files.writeString(path, instances);
     }
 
     /**
      * Writes the description of instances to a given {@link Path}
      */
     private Path writeInvalidInstanceInformation(Path path) throws IOException {
-        Iterable<String> instances = Arrays.asList("instances:", "  - name: \"THIS=not a,valid DN\"", "    ip: \"127.0.0.1\"");
-        return Files.write(path, instances, StandardCharsets.UTF_8);
+        String instances = """
+            instances:
+              - name: "THIS=not a,valid DN"
+                ip: "127.0.0.1"
+            """;
+        return Files.writeString(path, instances);
     }
 
     @SuppressForbidden(reason = "resolve paths against CWD for a CLI tool")
